fix weird font issue on mobile for blog exerpt

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -344,7 +344,7 @@ a.post-end-link:visited{
         font-style: italic;
     }
     @include media-query($on-laptop) {
-        font-size: 10px;
+       font-size: 15px;
     }
 }
 
